--- a/ContactApp/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactApp/Storyboards/Base.lproj/Main.storyboard
@@ -3,11 +3,12 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Persons List-->
+        <!--Contact List-->
         <scene sceneID="3fc-dy-K18">
             <objects>
                 <tableViewController id="2UA-ya-s1w" customClass="ContactListViewController" customModule="ContactApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,6 +33,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="1Ru-BP-zFq" kind="show" id="lrB-fT-MI3"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -39,11 +43,58 @@
                             <outlet property="delegate" destination="2UA-ya-s1w" id="TBI-wN-619"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Persons List" id="YS2-K6-RoH"/>
+                    <navigationItem key="navigationItem" title="Contact List" id="YS2-K6-RoH"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="enL-YL-t3H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-121" y="-130"/>
+        </scene>
+        <!--Full Name-->
+        <scene sceneID="miG-1T-m2u">
+            <objects>
+                <viewController id="1Ru-BP-zFq" customClass="ContactInfoViewController" customModule="ContactApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="c7L-zT-WT0">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="22h-U4-h7F">
+                                <rect key="frame" x="16" y="195" width="361" height="78"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFF-Cz-Oe4">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ybz-Wh-soG">
+                                        <rect key="frame" x="0.0" y="54" width="361" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="qHw-i4-Aug"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="MhI-EK-dCZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="22h-U4-h7F" firstAttribute="top" secondItem="MhI-EK-dCZ" secondAttribute="top" constant="40" id="58E-AH-JNy"/>
+                            <constraint firstItem="MhI-EK-dCZ" firstAttribute="trailing" secondItem="22h-U4-h7F" secondAttribute="trailing" constant="16" id="P7c-NN-724"/>
+                            <constraint firstItem="22h-U4-h7F" firstAttribute="leading" secondItem="MhI-EK-dCZ" secondAttribute="leading" constant="16" id="TkR-zg-EGI"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Full Name" id="0lu-uu-0ZX"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="Ybz-Wh-soG" id="wmy-aD-XDV"/>
+                        <outlet property="phoneLabel" destination="aFF-Cz-Oe4" id="btr-Qe-uPv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pqb-l8-Ehc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="685" y="-130"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8lx-oU-LVb">
